--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link href="style.css" type="text/css" rel="stylesheet">
         <title>Hidden Leaf™</title>
     </head>
     <body>
         <header>
-            The Village Hidden in the Leaves
+            <h1 class="headings">
+                The Village Hidden in the Leaves
+            </h1>
         </header>
         <div>
             <img src="images/hidden-leaf-village.jpg" alt="Hidden Leaf Village">
