learning about margins

--- a/index.html
+++ b/index.html
@@ -11,8 +11,26 @@
                 The Village Hidden in the Leaves
             </h1>
         </header>
-        <div>
+        <div><a href="leaf_village.html">
             <img src="images/hidden-leaf-village.jpg" alt="Hidden Leaf Village">
+        </a>
+        <p>Enter the Hidden Leaf</p>
+        <p class="atkatsuki">we don't fuck with da Atkatsuki</p>
         </div>
+
+        <div class="madara">
+            and fuck Madara too
+        </div>
+        <h2>I'm an h2</h2>
+
+<div class="test-box">
+  200px wide
+</div>
+<div class="test-box test-box-nosizing">
+  200px wide + border + padding = 300px
+</div>
+<div class="test-box test-box-nosizing test-box-sizing">
+  200px wide + border + padding + box-sizing: border-box = 200px
+</div>
     </body>
 </html>
